# dart-client

./: Makefile  README.md  pubspec.yaml
ffi/: Cargo.toml  build.rs
ffi/src/: helpers.rs  lib.rs
ffi/src/models/: mod.rs
lib/: dart_client.dart  ffi.dart  ffi.g.dart
